adapt integration tasks to our Elasticsearch server